[package]
name = "eave-inspect"
version = "0.1.0"
authors = ["Eave Developers"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
derive_more = "0.99"
log = "0.4.8"
sc-cli = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sc-service = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
structopt = "0.3.8"
