[package]
name = "eave-rpc"
version = "0.1.0"
authors = ["Eave Developers"]
edition = "2018"


[dependencies]
jsonrpc-core = "15.0.0"
codec = { package = "parity-scale-codec", version = "2.0.0" }
eave-primitives = { package = "eave-primitives", path = "../primitives" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }

module-staking-pool-rpc = { path = "../ecosystem-pallets/aca/modules/staking-pool/rpc" }
orml-oracle-rpc = { path = "../ecosystem-pallets/orml/oracle/rpc" }
eave-runtime-common = { path = "../runtime/common" }
evm-rpc = { path = "../ecosystem-pallets/aca/modules/evm/rpc" }
