[package]
name = "eave-pallet-loans"
version = "0.1.0"
authors = ["Eave Protocol"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-traits = { path = "../../ecosystem-pallets/orml/traits", default-features = false }
orml-tokens = { path = "../../ecosystem-pallets/orml/tokens", default-features = false }
eave-primitives = { package = "eave-primitives", path = "../../primitives", default-features = false }
eave-pallet-support = { package = "eave-pallet-support", path = "../support", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-currencies = { path = "../../ecosystem-pallets/orml/currencies", default-features = false }
eave-pallet-shy-treasury = { package = "eave-pallet-shy-treasury", path = "../shy-treasury", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"frame-system/std",
	"frame-support/std",
	"sp-std/std",
	"sp-runtime/std",
	"orml-traits/std",
	"eave-primitives/std",
	"eave-pallet-support/std",
	"orml-tokens/std",
]
