[package]
name = "eave-pallet-shy-engine"
version = "0.1.0"
authors = ["Eave Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-tokens = { path = "../../ecosystem-pallets/orml/tokens", default-features = false }
orml-traits = { path = "../../ecosystem-pallets/orml/traits", default-features = false }
orml-utilities = { path = "../../ecosystem-pallets/orml/utilities", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
eave-pallet-support = { package = "eave-pallet-support", path = "../support", default-features = false }
eave-pallet-loans = { package = "eave-pallet-loans", path = "../loans", default-features = false }
eave-primitives = { package = "eave-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-currencies = { path = "../../ecosystem-pallets/orml/currencies", default-features = false }
eave-pallet-dex = { path = "../dex" }
eave-pallet-shy-treasury = { package = "eave-pallet-shy-treasury", path = "../shy-treasury" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"orml-tokens/std",
	"orml-traits/std",
	"sp-application-crypto/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"eave-pallet-support/std",
	"eave-pallet-loans/std",
	"eave-primitives/std",
	"orml-utilities/std",
]
