[package]
name = "eave-pallet-shy"
version = "0.1.0"
authors = ["Eave Protocol"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-tokens = { path = "../../orml/tokens", default-features = false }
eave-pallet-shy-engine = { package = "eave-pallet-shy-engine", path = "../shy-engine", default-features = false }
eave-pallet-loans = { package = "eave-pallet-loans", path = "../loans", default-features = false }
eave-pallet-support = { package = "eave-pallet-support", path = "../support", default-features = false }
eave-primitives = { package = "eave-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-currencies = { path = "../../orml/currencies", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
eave-pallet-shy-treasury = { package = "eave-pallet-shy-treasury", path = "../shy-treasury", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"orml-tokens/std",
	"eave-pallet-loans/std",
	"eave-pallet-shy-engine/std",
	"eave-pallet-support/std",
	"eave-primitives/std",
]
