[package]
name = "eave-pallet-slip"
version = "0.1.0"
authors = ["Eave Protocol"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
eave-pallet-staking-pool = { package = "eave-pallet-staking-pool", path = "../staking-pool", default-features = false }
eave-pallet-support = { package = "eave-pallet-support", path = "../support", default-features = false }
eave-primitives = { package = "eave-primitives", path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"eave-pallet-staking-pool/std",
	"eave-pallet-support/std",
	"eave-primitives/std",
]
